--- a/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement.csproj
@@ -55,16 +55,34 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="ClienteAbbonato.cs" />
     <Compile Include="Commissione.cs" />
+    <Compile Include="Contatti.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Contatti.Designer.cs">
+      <DependentUpon>Contatti.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Home.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Home.Designer.cs">
+      <DependentUpon>Home.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Contatti.resx">
+      <DependentUpon>Contatti.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Home.resx">
+      <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
