--- a/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="ClienteAbbonato.cs" />
     <Compile Include="Commissione.cs" />
+    <Compile Include="CommissioniInScadenza.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CommissioniInScadenza.Designer.cs">
+      <DependentUpon>CommissioniInScadenza.cs</DependentUpon>
+    </Compile>
     <Compile Include="Contatti.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -73,12 +79,6 @@
     <Compile Include="Home.Designer.cs">
       <DependentUpon>Home.cs</DependentUpon>
     </Compile>
-    <Compile Include="Home1.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Home1.Designer.cs">
-      <DependentUpon>Home1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\aggiungiCommissione.cs">
@@ -87,6 +87,9 @@
     <Compile Include="Resources\aggiungiCommissione.Designer.cs">
       <DependentUpon>aggiungiCommissione.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CommissioniInScadenza.resx">
+      <DependentUpon>CommissioniInScadenza.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Contatti.resx">
       <DependentUpon>Contatti.cs</DependentUpon>
     </EmbeddedResource>
@@ -95,9 +98,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Home1.resx">
-      <DependentUpon>Home1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
