--- a/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Contatti.Designer.cs">
       <DependentUpon>Contatti.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditorHandler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
