--- a/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement.csproj
@@ -67,13 +67,14 @@
     <Compile Include="Contatti.Designer.cs">
       <DependentUpon>Contatti.cs</DependentUpon>
     </Compile>
-    <Compile Include="EditorHandler.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="EditorHandlerAggiungiCommissione.cs" />
+    <Compile Include="ClientManagement.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ClientManagement.Designer.cs">
+      <DependentUpon>ClientManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="HandlerClientManagement.cs" />
     <Compile Include="Home.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -82,10 +83,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\aggiungiCommissione.cs">
+    <Compile Include="aggiungiCommissione.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Resources\aggiungiCommissione.Designer.cs">
+    <Compile Include="aggiungiCommissione.Designer.cs">
       <DependentUpon>aggiungiCommissione.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="CommissioniInScadenza.resx">
@@ -94,8 +95,8 @@
     <EmbeddedResource Include="Contatti.resx">
       <DependentUpon>Contatti.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="ClientManagement.resx">
+      <DependentUpon>ClientManagement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
@@ -105,7 +106,7 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Resources\aggiungiCommissione.resx">
+    <EmbeddedResource Include="aggiungiCommissione.resx">
       <DependentUpon>aggiungiCommissione.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="DiagrammaClassi.cd" />
