--- a/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement.csproj
@@ -53,7 +53,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cliente.cs" />
-    <Compile Include="ClienteAbbonato.cs" />
     <Compile Include="Commissione.cs" />
     <Compile Include="CommissioniInScadenza.cs">
       <SubType>UserControl</SubType>
@@ -82,7 +81,7 @@
     <Compile Include="Home.Designer.cs">
       <DependentUpon>Home.cs</DependentUpon>
     </Compile>
-    <Compile Include="ListaEntry.cs" />
+    <Compile Include="ListaClienti.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="aggiungiCommissione.cs">
