--- a/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement.csproj
@@ -97,6 +97,12 @@
       <DependentUpon>Home.cs</DependentUpon>
     </Compile>
     <Compile Include="ListaClienti.cs" />
+    <Compile Include="ModificaDati.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificaDati.Designer.cs">
+      <DependentUpon>ModificaDati.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="aggiungiCommissione.cs">
@@ -122,6 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModificaDati.resx">
+      <DependentUpon>ModificaDati.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
