--- a/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement.csproj
@@ -117,12 +117,12 @@
     <Compile Include="Database\IDatabase.cs" />
     <Compile Include="ListaClienti.cs" />
     <Compile Include="Models\CommissionManager.cs" />
-    <Compile Include="PopUpModifica\EditorModificaDati.cs" />
-    <Compile Include="PopUpModifica\ModificaDati.cs">
+    <Compile Include="PopUp\ModificaCommissione\EditorModificaCommissione.cs" />
+    <Compile Include="PopUp\ModificaCommissione\ModificaCommissione.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PopUpModifica\ModificaDati.Designer.cs">
-      <DependentUpon>ModificaDati.cs</DependentUpon>
+    <Compile Include="PopUp\ModificaCommissione\ModificaCommissione.Designer.cs">
+      <DependentUpon>ModificaCommissione.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -156,8 +156,8 @@
     <EmbeddedResource Include="Home\Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PopUpModifica\ModificaDati.resx">
-      <DependentUpon>ModificaDati.cs</DependentUpon>
+    <EmbeddedResource Include="PopUp\ModificaCommissione\ModificaCommissione.resx">
+      <DependentUpon>ModificaCommissione.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -200,6 +200,8 @@
     <Content Include="db.txt" />
     <Content Include="Resources\clientManagement.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="PopUp\ModificaCliente\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
