--- a/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement.csproj
@@ -55,12 +55,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Calendario.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Calendario.Designer.cs">
-      <DependentUpon>Calendario.cs</DependentUpon>
-    </Compile>
     <Compile Include="Contatti\AggiungiContatto.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -90,15 +84,15 @@
     <Compile Include="Home\CommissioniInScadenza.Designer.cs">
       <DependentUpon>CommissioniInScadenza.cs</DependentUpon>
     </Compile>
-    <Compile Include="CommissioniTotali\CommissioniTotali.cs">
+    <Compile Include="Commissioni\CommissioniTotali.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="CommissioniTotali\CommissioniTotali.Designer.cs">
+    <Compile Include="Commissioni\CommissioniTotali.Designer.cs">
       <DependentUpon>CommissioniTotali.cs</DependentUpon>
     </Compile>
     <Compile Include="Database\DBHandler.cs" />
     <Compile Include="Home\EditorCommissioniInScadenza.cs" />
-    <Compile Include="CommissioniTotali\EditorCommissioniTotali.cs" />
+    <Compile Include="Commissioni\HandlerCommissioniTotali.cs" />
     <Compile Include="Contatti\EditorContatti.cs" />
     <Compile Include="Home\EditorHandlerAggiungiCommissione.cs" />
     <Compile Include="ClientManagement.cs">
@@ -131,6 +125,13 @@
     <Compile Include="PopUp\ModificaCommissione\ModificaCommissione.Designer.cs">
       <DependentUpon>ModificaCommissione.cs</DependentUpon>
     </Compile>
+    <Compile Include="PopUp\VisualizzaCommissione\HandlerVisualizzaCommissione.cs" />
+    <Compile Include="PopUp\VisualizzaCommissione\VisualizzaCommissione.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PopUp\VisualizzaCommissione\VisualizzaCommissione.Designer.cs">
+      <DependentUpon>VisualizzaCommissione.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Home\aggiungiCommissione.cs">
@@ -139,9 +140,13 @@
     <Compile Include="Home\aggiungiCommissione.Designer.cs">
       <DependentUpon>aggiungiCommissione.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Calendario.resx">
-      <DependentUpon>Calendario.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="Scadenze\HandlerListaCommissioniDaFare.cs" />
+    <Compile Include="Scadenze\ListaCommissioniDaFare.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Scadenze\ListaCommissioniDaFare.Designer.cs">
+      <DependentUpon>ListaCommissioniDaFare.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Contatti\AggiungiContatto.resx">
       <DependentUpon>AggiungiContatto.cs</DependentUpon>
     </EmbeddedResource>
@@ -154,7 +159,7 @@
     <EmbeddedResource Include="Home\CommissioniInScadenza.resx">
       <DependentUpon>CommissioniInScadenza.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CommissioniTotali\CommissioniTotali.resx">
+    <EmbeddedResource Include="Commissioni\CommissioniTotali.resx">
       <DependentUpon>CommissioniTotali.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ClientManagement.resx">
@@ -169,6 +174,9 @@
     <EmbeddedResource Include="PopUp\ModificaCommissione\ModificaCommissione.resx">
       <DependentUpon>ModificaCommissione.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PopUp\VisualizzaCommissione\VisualizzaCommissione.resx">
+      <DependentUpon>VisualizzaCommissione.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
@@ -177,6 +185,10 @@
     <EmbeddedResource Include="Home\aggiungiCommissione.resx">
       <DependentUpon>aggiungiCommissione.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Scadenze\ListaCommissioniDaFare.resx">
+      <DependentUpon>ListaCommissioniDaFare.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="DiagrammaClassi.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
