--- a/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement.csproj
@@ -76,6 +76,7 @@
     </Compile>
     <Compile Include="Extensions\clienteCommissioniExtensions.cs" />
     <Compile Include="Extensions\ControlloCaratteri.cs" />
+    <Compile Include="Extensions\ControlloListView.cs" />
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\Commissione.cs" />
     <Compile Include="Home\CommissioniInScadenza.cs">
