--- a/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement.csproj
@@ -75,8 +75,7 @@
       <DependentUpon>ListaContatti.cs</DependentUpon>
     </Compile>
     <Compile Include="Extensions\clienteCommissioniExtensions.cs" />
-    <Compile Include="Extensions\ControlloCaratteri.cs" />
-    <Compile Include="Extensions\ControlloListView.cs" />
+    <Compile Include="Extensions\Controllo.cs" />
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Models\Commissione.cs" />
     <Compile Include="Home\CommissioniInScadenza.cs">
