--- a/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement.csproj
@@ -220,7 +220,8 @@
     <None Include="Resources\appbar.home.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="db.txt" />
+    <Content Include="dbCommissioni.txt" />
+    <Content Include="dbClienti.txt" />
     <Content Include="Resources\clientManagement.png" />
   </ItemGroup>
   <ItemGroup />
