sostituita comportamento ad eventi con observer

--- a/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement.csproj
@@ -113,6 +113,8 @@
     </Compile>
     <Compile Include="Database\IDatabase.cs" />
     <Compile Include="Models\CommissionManager.cs" />
+    <Compile Include="Observer\IObserver.cs" />
+    <Compile Include="Observer\Subject.cs" />
     <Compile Include="PopUp\ModificaCliente\EditorModificaCliente.cs" />
     <Compile Include="PopUp\ModificaCliente\ModificaCliente.cs">
       <SubType>Form</SubType>
